# chipmachine

./: .gitignore  .gitmodules  .travis.yml  ARCHITECTURE.md  Archive.cpp  Archive.h  AudioPlayer.h  AudioPlayerLinux.cpp  AudioPlayerLinux.h  AudioPlayerWindows.cpp  AudioPlayerWindows.h  CHANGELOG.md  CMakeLists.txt  ChipPlayer.h  ChipPlugin.h  Info.plist  MANUAL.md  Makefile  Makefile.inc  ModPlugin.h  PSXPlugin.h  PlayerFactory.h  README.md  SearchIndex.cpp  SearchIndex.h  SongDb.cpp  SongDb.h  TODO  TODO.md  TelnetServer.cpp  TelnetServer.h  Terminal.h  TextScreen.cpp  TextScreen.h  URLPlayer.cpp  URLPlayer.h  VicePlayer.cpp  VicePlayer.h  WebGetter.cpp  WebGetter.h  (+26 more)
attic/: Player.cpp  SongDb.h  SongState.h  TelnetInterface.cpp  Terminal.h  URLPlayer.cpp  URLPlayer.h  WordTree.cpp  inject.cpp  main.cpp
common/: Fifo.h  Misc.h
data/: STIL.txt  Songlengths.txt  adplug.db  amigavibes.txt  amiremix.txt  amp.txt  asma.txt  bitar.txt  bitar.xml  bitworld.txt  c64takeaway.xml  demovibes.txt  hvsc.txt  hvtc.txt  nsfe.txt  pouet.txt  pouet_youtube.xml  radio.txt  rko.txt  rsn.txt  scenesat.txt  sndh.txt  syntax.txt
data/c64/: amiga_pos.vkm  beos_pos.vkm  beos_sym.vkm  default.vrs  dos_pos.vkm  os2.vkm  os2_sym.vkm  osx_pos.vkm  osx_sym_de.vkm  osx_sym_us.vkm  sdl_sym.vkm  sdl_sym_da.vkm  sdl_sym_de.vkm  sdl_sym_fi.vkm  sdl_sym_no.vkm  win_sym_de.vkm  win_sym_it.vkm  win_sym_us.vkm  x11_pos.vkm  x11_posger.vkm  x11_sym.vkm  x11_symger.vkm
data/playlists/: Best of Gameboy.plist  Christmas C64.plist  So Bad it's Good.plist
data/uade/: eagleplayer.conf  score  uade.conf
demofx/: Effect.h  README.md  Scroller.h  StarField.h
docopt/: CMakeLists.txt
extra/: cm  dpkg.control  uade-raspberrypi.deb
lua/: db.lua  db.lua.orig  init.lua  screen.lua  screen.lua.orig
miniplay/: CMakeLists.txt  miniplay.cpp
mksonglist/: CMakeLists.txt  SongFileIdentifier.cpp  SongFileIdentifier.h  mksonglist.cpp
music/Amiga/: DW.David Whittaker - Speedball  Dr.Awesome - Intromusic3.mod  Firefox + Tip - Enigma.mod  Horace Wimp - Hymn to Aurora.mod  Jester - Stardust Memories.mod  Nuke - Loader.mod  Rob Hubbard - Gold Runner.rho  Starbuck - Tennis.mod
music/Atari/: Alla_vill_till_himmelen.sndh  Arcade_Classix_Hiscore.sndh
music/C64 Demo/: 3_Ankare.sid  Ambient.sid  Amplifire.sid  Andropolis.sid  Brief_Bursts_of_Happiness.sid  Datalife_Verbatim.sid  Edge_of_Disgrace.sid  Enter_the_Ninja.sid  Euro-Dance.sid  Fairlightz.sid  Get_Along.sid  Give_It_a_Try.sid  Groovebox.sid  Hyperraum.sid  Hypersensational.sid  Natural_Wonders_2.sid  On_a_Rainy_Day.sid  Propaganda_M_O_N.sid  Ska_Nya_Roester_Sjunga.sid  Star_Flake.sid  Sweet_Infection.sid  Thats_the_Wave_It_Is.sid  Thats_the_Way_It_Is_main.sid
music/C64 Games/: Ark_Pandora.sid  Arkanoid.sid  Auf_Wiedersehen_Monty.sid  Comic_Bakery.sid  Commando.sid  Firelord.sid  Flimbos_Quest.sid  Ghouls_n_Ghosts.sid  Hawkeye.sid  Hyper_Sports.sid  Krakout.sid  L_E_D_Storm.sid  Last_Ninja.sid  Last_Ninja_2.sid  Legend_of_Kage.sid  Lightforce.sid  Magic_Johnsons_Basketball.sid  Master_of_Magic.sid  Monty_on_the_Run.sid  One_Man_and_His_Droid.sid  Parallax.sid  Rambo_First_Blood_Part_II.sid  RoboCop_3.sid  Sanxion.sid  Supremacy.sid  Wizball.sid  Yie_Ar_Kung_Fu.sid
music/Console/: Artificial Intelligence Bomb.nsfe  Chrono Cross (Time of the Dreamwatch).psf  ChronoTrigger.rsn  Duck Tales.nsfe  Martin Galway - Ultima Runes of Virtue II.gbs  Mega Man 2.nsfe  Sonic the Hedgehog.kss  mario.miniusf  sftr.rsn  sm64.usflib
netlink/src/: smart_buffer.cc
plugins/GMEPlugin/: GMEPlugin.cpp  GMEPlugin.h  Makefile
plugins/ModPlugin/: Makefile  ModPlugin.cpp  ModPlugin.h
plugins/SexyPSFPlugin/: Makefile  SexyPSFPlugin.cpp
plugins/UADEPlugin/: Fifo.h  Makefile  UADEPlugin.cpp  UADEPlugin.h  libuade.c
plugins/VICEPlugin/: Makefile  config.h  siddefs.h  translate.h
plugins/VicePlugin/: Makefile  README  VicePlugin.cpp  VicePlugin.h  config.h
scripts/: ami.d  csdb2plist.py  gensource.py  makedb.py  makedb2.py  modland.cpp  modland.rb  pouet.d  songlen.py
src/: Archive.cpp  Archive.h  AudioPlayer.cpp  AudioPlayer.h  AudioPlayerWindows.cpp  AudioPlayerWindows.h  CLI11.hpp  ChipInterface.h  ChipMachine.cpp  ChipMachine.h  ChipMachine_commands.cpp  ChipMachine_config.cpp  ChipMachine_keys.cpp  ChipPlayer.h  ChipPlugin.h  CueSheet.h  Dialog.h  GZPlugin.cpp  GZPlugin.h  Icon.h  Icons.h  LineEdit.h  List.h  MainScreen.h  MusicBars.cpp  MusicBars.h  MusicDatabase.cpp  MusicDatabase.h  MusicPlayer.cpp  MusicPlayer.h  MusicPlayerList.cpp  MusicPlayerList.h  PiTFT.cpp  PiTFT.h  PlayListScreen.h  PlayTracker.h  Player.cpp  Player.h  PlayerFactory.h  PlayerInterface.h  (+62 more)
src/attic/: PiTFT.cpp  PiTFT.h  SongList.h  YoutubePlugin.cpp  lcd.cpp
src/bbs/: Console.cpp  Console.h  TelnetServer.cpp  TelnetServer.h  TextScreen.cpp  TextScreen.h
src/common/: Fifo.h
src/netlink/: README
src/utils/: format.cpp  format.h  log.cpp  log.h  utils.cpp  utils.h  var.h
src/ziplib/: zip_dirent.c  zip_open.c
testmus/adlib/: america2.rol  aurora.mad  bass beat.dtl  benezuck.pis  break back.xms  bydlo.bam  comic bakery!.sat  commando hiscore.amd  copper.vib  countrytune.dfm  crooner.d01  cruisin' mah '95 pimpmobile.fmk  crystal intro.sa2  demo1.jbm  dizzy fast food.sig  dune - arrakis.agd  dune - arrakis.sdb  dune ii - 00.adl  dune1.dro  easy1.xsm  fdance06.dmo  first samurai.mus  flash2.edl  groovy.mkj  human nature.d00  intro.m  kgb - burokrat.sqx  kq1 flutey.sci  lardossian synthesis.a2m  lassie come home (alphaville).fmt  loader.adlib  logical - 13310.plx  maxosong.ksm  meanwhile.laa  osmo-1.hsc  roster.imf  sanxion.sng  satellite one.mtr  sb main.fmf  schwert und skelett mix.a2m  (+7 more)
testmus/ao/: 01 - opening.miniqsf  episode2.ssflib  gaxeduel01.ssf  mega man 2 - the power fighters.qsflib  pdz-06.minissf
testmus/gsf/: 01 title screen (0003).minigsf  zelda.gsflib
testmus/nds/: 001 title.mini2sf  ntr-azee-usa.2sflib
testmus/openmpt/: backfire.far  batmanreturns.dsr  crusader - no regret - distort.amf  fly by night.ams  leroy - intro.uni  sparkles.ult  (+1 more)
ziplib/: zip_dirent.c  zipint.h
(+2123 files in other folders)
